# simple-agent

./: .dockerignore  .gitignore  .promptignore  Dockerfile  Justfile  LICENSE.txt  README.md  compose.yml  recipe.json
.github/workflows/: ci.yml  scheduled.yml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs  main.rs  ollama.rs  openrouter.rs  providers.rs  run.rs
system/: system.md  task_build_run.md  task_python_fibonacci.md  task_template.hbs  task_wikipedia_title.md
