[package]
name = "simple-agent"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "process",
    "signal",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }


serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
uuid = { version = "1.17.0", features = ["v4"] }
reqwest = "0.12.22"
ollama-rs = { version = "0.2.2", features = ["chat-history"] }
handlebars = "6.3.2"
serde_yml = "0.0.12"
openai-api-rs = { version = "6.0.8", features = ["rustls"] }
