[package]
name = "simple-agent"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "process",
    "signal",
] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }


serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }
reqwest = "0.12.24"
ollama-rs = { version = "0.2.2", features = ["chat-history"] }
handlebars = "6.3.2"
serde_yml = "0.0.12"
openai-api-rs = { version = "8.0.2", features = ["rustls"] }
